--- a/src/views/index.html
+++ b/src/views/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>1 Col Portfolio - Start Bootstrap Template</title>
+    <title>Ryder Analytics POC</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +41,9 @@
         </div>
         <!-- /.container -->
     </nav>
-
+    <div>
+      This area is for embedding Power BI Dashboards/Reports
+    </div>
     
 
     <!-- jQuery -->
