--- a/src/views/index.html
+++ b/src/views/index.html
@@ -58,6 +58,11 @@
            Report Id
            <input type="text" id="txtEmbedReportId">
       </div>
+      <div id="browse_app">
+           <!-- <a class="btn btn-large btn-info" href="/src/views/login.html">Browse</a> -->
+           
+         <button type="button" onclick="loadPowerBIReport()">Submit</button>
+      </div>
     </div>
     <div>Embed View</div>
     <div id="embedContainer" style="height: 596.632px;">
@@ -70,8 +75,10 @@
 <script src="https://microsoft.github.io/PowerBI-JavaScript/demo/node_modules/powerbi-client/dist/powerbi.js"></script>
 
 <script>
+function loadPowerBIReport(){
+
     // Read embed application token from textbox
-var txtAccessToken = $('#txtAccessToken').val();
+    var txtAccessToken = $('#txtAccessToken').val();
  
 // Read embed URL from textbox
 var txtEmbedUrl = $('#txtReportEmbed').val();
@@ -129,6 +136,10 @@ report.on("saved", function(event) {
         Log.logText('In order to interact with the new report, create a new token and load the new report');
      }
  });
+}
+
+
+
 
     </script>
     
