Power BI Report Integration

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -108,7 +108,8 @@ var config= {
         navContentPaneEnabled: true
     }
 };
- 
+ console.log("config");
+ console.log(config);
 // Get a reference to the embedded report HTML element
 var embedContainer = $('#embedContainer')[0];
  
