--- a/src/views/index.html
+++ b/src/views/index.html
@@ -96,7 +96,7 @@ var permissions = models.Permissions.All;
 // This object is used when calling powerbi.embed.
 // This also includes settings and options such as filters.
 // You can find more information at https://github.com/Microsoft/PowerBI-JavaScript/wiki/Embed-Configuration-Details.
-var config= {
+/*var config= {
     type: 'report',
     tokenType: models.TokenType.Embed,
     accessToken: txtAccessToken,
@@ -107,20 +107,19 @@ var config= {
         filterPaneEnabled: true,
         navContentPaneEnabled: true
     }
-};
- console.log("config");
- console.log(config);
+};*/
+
 // Get a reference to the embedded report HTML element
-var embedContainer = $('#embedContainer')[0];
+//var embedContainer = $('#embedContainer')[0];
  
 // Embed the report and display it within the div container.
-var report = powerbi.embed(embedContainer, config);
+//var report = powerbi.embed(embedContainer, config);
  
 // Report.off removes a given event handler if it exists.
-report.off("loaded");
+//report.off("loaded");
  
 // Report.on will add an event handler which prints to Log window.
-report.on("loaded", function() {
+/*report.on("loaded", function() {
     Log.logText("Loaded");
 });
  
@@ -136,7 +135,24 @@ report.on("saved", function(event) {
     if(event.detail.saveAs) {
         Log.logText('In order to interact with the new report, create a new token and load the new report');
      }
- });
+ });*/
+
+var config = {
+        type: 'dashboard',
+        accessToken: txtAccessToken,
+        embedUrl: txtEmbedUrl
+    };
+
+        // Grab the reference to the div HTML element that will host the dashboard.
+var dashboardContainer = $('#embedContainer')[0];
+
+
+    // Embed the dashboard and display it within the div container.
+var dashboard = powerbi.embed(dashboardContainer, config);
+
+ console.log("config");
+ console.log(config);
+
 }
 
 
