--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,174 +1,84 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+    <head>
+        <title>Minimal sample using ADAL.JS</title>
+        <meta charset="utf-8" />
+        <style type="text/css">body { font-family: Tahoma; padding: 3em; }</style>
+        <script src="https://secure.aadcdn.microsoftonline-p.com/lib/1.0.11/js/adal.min.js"></script>
+    </head>
+    <body>
+        <p>
+            A minimal sample app using ADAL.JS and vanilla JavaScript to obtain 
+            an access token from Azure Active Directory and make an API request.
+        </p>
+        <p>
+            <a href="#" onclick="authContext.login(); return false;">Log in</a> |
+            <a href="#" onclick="authContext.logOut(); return false;">Log out</a>
+        </p>
+        <p id="username"></p>
+        <pre id="api_response"></pre>
 
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Ryder Analytics POC</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="css/1-col-portfolio.css" rel="stylesheet">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-</head>
-
-<body>
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">Navishare Portal POC</a>
-             
-            </div>
-            
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
-    <div>
-      This area is for embedding Power BI Dashboards/Reports
-      <div id="browse_app">
-           <!-- <a class="btn btn-large btn-info" href="/src/views/login.html">Browse</a> -->
-           Embed Token
-           <input type="text" id="txtAccessToken">
-      </div>
-      <div id="browse_app">
-           <!-- <a class="btn btn-large btn-info" href="/src/views/login.html">Browse</a> -->
-           Embed URL
-           <input type="text" id="txtReportEmbed">
-      </div>
-      <div id="browse_app">
-           <!-- <a class="btn btn-large btn-info" href="/src/views/login.html">Browse</a> -->
-           Report Id
-           <input type="text" id="txtEmbedReportId">
-      </div>
-      <div id="browse_app">
-           <!-- <a class="btn btn-large btn-info" href="/src/views/login.html">Browse</a> -->
-           
-         <button type="button" onclick="loadPowerBIReport()">Submit</button>
-      </div>
-    </div>
-    <div>Embed View</div>
-    <div id="embedContainer" style="height: 596.632px;">
-   
-    </div>
-  <script src="js/jquery.js"></script>
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
-   
-<script src="https://microsoft.github.io/PowerBI-JavaScript/demo/node_modules/powerbi-client/dist/powerbi.js"></script>
-
-<script>
-function loadPowerBIReport(){
-
-    // Read embed application token from textbox
-    var txtAccessToken = $('#txtAccessToken').val();
- 
-// Read embed URL from textbox
-var txtEmbedUrl = $('#txtReportEmbed').val();
- 
-// Read report Id from textbox
-var txtEmbedReportId = $('#txtEmbedReportId').val();
- 
-// Get models. models contains enums that can be used.
-var models = window['powerbi-client'].models;
- 
-// We give All permissions to demonstrate switching between View and Edit mode and saving report.
-var permissions = models.Permissions.All;
- 
-// Embed configuration used to describe the what and how to embed.
-// This object is used when calling powerbi.embed.
-// This also includes settings and options such as filters.
-// You can find more information at https://github.com/Microsoft/PowerBI-JavaScript/wiki/Embed-Configuration-Details.
-var config= {
-    type: 'report',
-    //tokenType: models.TokenType.Embed,
-    accessToken: txtAccessToken,
-    embedUrl: txtEmbedUrl,
-    /*id: txtEmbedReportId,
-    permissions: permissions,
-    settings: {
-        filterPaneEnabled: true,
-        navContentPaneEnabled: true
-    }*/
-};
-
-
-
-
-// Get a reference to the embedded report HTML element
-var embedContainer = $('#embedContainer')[0];
- 
-// Embed the report and display it within the div container.
-var report = powerbi.embed(embedContainer, config);
- 
-// Report.off removes a given event handler if it exists.
-//report.off("loaded");
- 
-// Report.on will add an event handler which prints to Log window.
-/*report.on("loaded", function() {
-    Log.logText("Loaded");
-});
- 
-report.on("error", function(event) {
-    Log.log(event.detail);
-     
-    report.off("error");
-});
- 
-report.off("saved");
-report.on("saved", function(event) {
-    Log.log(event.detail);
-    if(event.detail.saveAs) {
-        Log.logText('In order to interact with the new report, create a new token and load the new report');
-     }
- }); */ 
-
-/*var config = {
-        type: 'dashboard',
-        accessToken: txtAccessToken,
-        embedUrl: txtEmbedUrl
-    };
-
-        // Grab the reference to the div HTML element that will host the dashboard.
-var dashboardContainer = $('#embedContainer')[0];
-
-
-    // Embed the dashboard and display it within the div container.
-var dashboard = powerbi.embed(dashboardContainer, config);*/
-
- console.log("config");
- console.log(config);
-
-}
-
-
-
-
-    </script>
-    
-
-    <!-- jQuery -->
-    
-    
-  
-
-</body>
-
+        <script type="text/javascript">
+            // Set up ADAL
+            var authContext = new AuthenticationContext({
+                clientId: '18058e13-f49f-4ff2-a29d-ecf8254e7d2a',
+                postLogoutRedirectUri: 'https://suntest.azurewebsites.net/login'
+            });
+            // Make an AJAX request to the Microsoft Graph API and print the response as JSON.
+            var getCurrentUser = function (access_token) {
+                document.getElementById('api_response').textContent = 'Calling API...';
+                var xhr = new XMLHttpRequest();
+                xhr.open('GET', 'https://graph.microsoft.com/v1.0/me', true);
+                xhr.setRequestHeader('Authorization', 'Bearer ' + access_token);
+                xhr.onreadystatechange = function () {
+                    if (xhr.readyState === 4 && xhr.status === 200) {
+                        // Do something with the response
+                        document.getElementById('api_response').textContent =
+                            JSON.stringify(JSON.parse(xhr.responseText), null, '  ');
+                    } else {
+                        // TODO: Do something with the error (or non-200 responses)
+                        document.getElementById('api_response').textContent =
+                            'ERROR:\n\n' + xhr.responseText;
+                    }
+                };
+                xhr.send();
+            }
+            if (authContext.isCallback(window.location.hash)) {
+                // Handle redirect after token requests
+                authContext.handleWindowCallback();
+                var err = authContext.getLoginError();
+                if (err) {
+                    // TODO: Handle errors signing in and getting tokens
+                    document.getElementById('api_response').textContent =
+                        'ERROR:\n\n' + err;
+                }
+            } else {
+                // If logged in, get access token and make an API request
+                var user = authContext.getCachedUser();
+                if (user) {
+                    document.getElementById('username').textContent = 'Signed in as: ' + user.userName;
+                    document.getElementById('api_response').textContent = 'Getting access token...';
+                    
+                    // Get an access token to the Microsoft Graph API
+                    authContext.acquireToken(
+                        'https://graph.microsoft.com',
+                        function (error, token) {
+                            if (error || !token) {
+                                // TODO: Handle error obtaining access token
+                                document.getElementById('api_response').textContent =
+                                    'ERROR:\n\n' + error;
+                                return;
+                            }
+                            console.log("access Token");
+                            console.log(token);
+                            // Use the access token
+                            getCurrentUser(token);
+                        }
+                    );
+                } else {
+                    document.getElementById('username').textContent = 'Not signed in.';
+                }
+            }
+        </script>
+    </body>
 </html>
