--- a/src/views/index.html
+++ b/src/views/index.html
@@ -80,7 +80,7 @@
                             // Use the access token
                             //getCurrentUser(token);
                             if(token){
-                       window.location.href = "http://suntest.azurewebsites.net/home";
+                       window.location.href = "http://suntest.azurewebsites.net/home.html";
                     }
                         }
                     );
