--- a/src/views/home.html
+++ b/src/views/home.html
@@ -75,6 +75,8 @@
 <script src="https://microsoft.github.io/PowerBI-JavaScript/demo/node_modules/powerbi-client/dist/powerbi.js"></script>
 
 <script>
+console.log("Global Token::");
+console.log(tokenGlobal);
 function loadPowerBIReport(){
 
     // Read embed application token from textbox
