--- a/src/views/index.html
+++ b/src/views/index.html
@@ -19,6 +19,7 @@
         <pre id="api_response"></pre>
 
         <script type="text/javascript">
+        var tokenGlobal = "";
             // Set up ADAL
             var authContext = new AuthenticationContext({
                 clientId: '18058e13-f49f-4ff2-a29d-ecf8254e7d2a',
@@ -80,6 +81,7 @@
                             // Use the access token
                             //getCurrentUser(token);
                             if(token){
+                              tokenGlobal = token;
                        window.location.href = "http://suntest.azurewebsites.net/home.html";
                     }
                         }
