--- a/src/views/home.html
+++ b/src/views/home.html
@@ -76,7 +76,7 @@
 
 <script>
 console.log("Global Token::");
-console.log(tokenGlobal);
+console.log(localStorage.tokenGlobal);
 function loadPowerBIReport(){
 
     // Read embed application token from textbox
