--- a/src/views/home.html
+++ b/src/views/home.html
@@ -84,6 +84,13 @@
 <script>
 console.log("Global Token::");
 console.log(localStorage.tokenGlobal);
+var authContext = new AuthenticationContext({
+                clientId: '18058e13-f49f-4ff2-a29d-ecf8254e7d2a',
+               //5c8076ef-0c7a-4ad3-a4b6-2bc3a6e6277f 
+
+                //https://suntest.azurewebsites.net/.auth/login/aad/callback
+                postLogoutRedirectUri: 'https://suntest.azurewebsites.net/'
+            });
 function loadPowerBIReport(){
 
     // Read embed application token from textbox
