--- a/src/views/home.html
+++ b/src/views/home.html
@@ -117,6 +117,8 @@ var config= {
     //tokenType: models.TokenType.Embed,
     accessToken: txtAccessToken,
     embedUrl: txtEmbedUrl,
+    tokenType: models.TokenType.Embed,
+    id: "6e7289be-1d11-4903-9a7d-ae43dbd62876"
     /*id: txtEmbedReportId,
     permissions: permissions,
     settings: {
