--- a/src/views/home.html
+++ b/src/views/home.html
@@ -118,7 +118,7 @@ var config= {
     accessToken: txtAccessToken,
     embedUrl: txtEmbedUrl,
     tokenType: models.TokenType.Embed,
-    id: "6e7289be-1d11-4903-9a7d-ae43dbd62876"
+    id: txtEmbedReportId
     /*id: txtEmbedReportId,
     permissions: permissions,
     settings: {
