--- a/src/views/home.html
+++ b/src/views/home.html
@@ -89,7 +89,7 @@ var authContext = new AuthenticationContext({
                //5c8076ef-0c7a-4ad3-a4b6-2bc3a6e6277f 
 
                 //https://suntest.azurewebsites.net/.auth/login/aad/callback
-                postLogoutRedirectUri: 'https://suntest.azurewebsites.net/'
+                postLogoutRedirectUri: 'http://suntest.azurewebsites.net/'
             });
 function loadPowerBIReport(){
 
