--- a/src/views/index.html
+++ b/src/views/index.html
@@ -26,7 +26,7 @@
                //5c8076ef-0c7a-4ad3-a4b6-2bc3a6e6277f 
 
                 //https://suntest.azurewebsites.net/.auth/login/aad/callback
-                postLogoutRedirectUri: 'https://suntest.azurewebsites.net/'
+                postLogoutRedirectUri: 'http://suntest.azurewebsites.net/'
             });
             // Make an AJAX request to the Microsoft Graph API and print the response as JSON.
             var getCurrentUser = function (access_token) {
