--- a/src/views/home.html
+++ b/src/views/home.html
@@ -33,43 +33,30 @@
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">Navishare Portal POC</a>
+            <div class="navbar-header" style="float: left; padding-left: 400px;">
+                <a style="font-size: 25px;" href="#">Navishare Portal POC</a>
              
             </div>
+
             
             <!-- /.navbar-collapse -->
         </div>
+         <div style="float: left; padding-left: 1400px;">
+         <a style="font-size: 20px;"  href="#" onclick="authContext.logOut(); return false;">Log out</a>
+      </div>
         <!-- /.container -->
     </nav>
     <div>
-      This area is for embedding Power BI Dashboards/Reports
-      <div id="browse_app">
-           <!-- <a class="btn btn-large btn-info" href="/src/views/login.html">Browse</a> -->
-           Embed Token
-           <input type="text" id="txtAccessToken">
+      Click on the Report/Dashboard to Display
+      <div>
+            <button type="button" onclick="loadPowerBIView('loadnoreport')">LOAD NO REPORT</button>
+            <button type="button" onclick="loadPowerBIView('PlantProjectedReport')">PLANT PROJECTED REPORT</button>
+            <button type="button" onclick="loadPowerBIView('eydashboard)">EY DASHBOARD</button>
       </div>
-      <div id="browse_app">
-           <!-- <a class="btn btn-large btn-info" href="/src/views/login.html">Browse</a> -->
-           Embed URL
-           <input type="text" id="txtReportEmbed">
-      </div>
-      <div id="browse_app">
-           <!-- <a class="btn btn-large btn-info" href="/src/views/login.html">Browse</a> -->
-           Report Id
-           <input type="text" id="txtEmbedReportId">
-      </div>
-      <div id="browse_app">
-           <!-- <a class="btn btn-large btn-info" href="/src/views/login.html">Browse</a> -->
-           
+     
+      <!--<div id="browse_app">
          <button type="button" onclick="loadPowerBIReport()">Submit</button>
-      </div>
-      <div id="browse_app">
-           <!-- <a class="btn btn-large btn-info" href="/src/views/login.html">Browse</a> -->
-           
-         <a href="#" onclick="authContext.logOut(); return false;">Log out</a>
-      </div>
-
+      </div>-->
     </div>
     <div>Embed View</div>
     <div id="embedContainer" style="height: 596.632px;">
@@ -77,116 +64,67 @@
     </div>
   <script src="js/jquery.js"></script>
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
-   
-<script src="https://microsoft.github.io/PowerBI-JavaScript/demo/node_modules/powerbi-client/dist/powerbi.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="https://microsoft.github.io/PowerBI-JavaScript/demo/node_modules/powerbi-client/dist/powerbi.js"></script>
 
 <script>
-console.log("Global Token::");
-console.log(localStorage.tokenGlobal);
+
 var authContext = new AuthenticationContext({
-                clientId: '18058e13-f49f-4ff2-a29d-ecf8254e7d2a',
-               //5c8076ef-0c7a-4ad3-a4b6-2bc3a6e6277f 
+  clientId: '18058e13-f49f-4ff2-a29d-ecf8254e7d2a',
+  //https://suntest.azurewebsites.net/.auth/login/aad/callback
+  postLogoutRedirectUri: 'http://suntest.azurewebsites.net/'
+});
 
-                //https://suntest.azurewebsites.net/.auth/login/aad/callback
-                postLogoutRedirectUri: 'http://suntest.azurewebsites.net/'
-            });
-function loadPowerBIReport(){
+function loadPowerBIView(viewName){
+console.log(viewName);
+console.log("Azure Active Directory Token::");
+console.log(localStorage.tokenGlobal);
+}
 
-    // Read embed application token from textbox
-    var txtAccessToken = $('#txtAccessToken').val();
- 
-// Read embed URL from textbox
-var txtEmbedUrl = $('#txtReportEmbed').val();
- 
-// Read report Id from textbox
-var txtEmbedReportId = $('#txtEmbedReportId').val();
- 
-// Get models. models contains enums that can be used.
-var models = window['powerbi-client'].models;
- 
-// We give All permissions to demonstrate switching between View and Edit mode and saving report.
-var permissions = models.Permissions.All;
- 
-// Embed configuration used to describe the what and how to embed.
-// This object is used when calling powerbi.embed.
-// This also includes settings and options such as filters.
-// You can find more information at https://github.com/Microsoft/PowerBI-JavaScript/wiki/Embed-Configuration-Details.
-var config= {
+function loadPowerBIReport() {
+
+  // Read embed application token from textbox
+  var txtAccessToken = $('#txtAccessToken').val();
+
+  // Read embed URL from textbox
+  var txtEmbedUrl = $('#txtReportEmbed').val();
+
+  // Read report Id from textbox
+  var txtEmbedReportId = $('#txtEmbedReportId').val();
+
+  // Get models. models contains enums that can be used.
+  var models = window['powerbi-client'].models;
+
+  // We give All permissions to demonstrate switching between View and Edit mode and saving report.
+  var permissions = models.Permissions.All;
+
+  // Embed configuration used to describe the what and how to embed.
+  // This object is used when calling powerbi.embed.
+  // This also includes settings and options such as filters.
+  // You can find more information at https://github.com/Microsoft/PowerBI-JavaScript/wiki/Embed-Configuration-Details.
+  var config = {
     type: 'report',
-    //tokenType: models.TokenType.Embed,
     accessToken: txtAccessToken,
     embedUrl: txtEmbedUrl,
     tokenType: models.TokenType.Embed,
-    id: txtEmbedReportId
-    /*id: txtEmbedReportId,
-    permissions: permissions,
-    settings: {
-        filterPaneEnabled: true,
-        navContentPaneEnabled: true
-    }*/
-};
-
-
-
-
+    id: txtEmbedReportId,
+     // permissions: permissions,
+      settings: {
+          filterPaneEnabled: true,
+          navContentPaneEnabled: true
+      }
+  };
 // Get a reference to the embedded report HTML element
 var embedContainer = $('#embedContainer')[0];
- 
 // Embed the report and display it within the div container.
 var report = powerbi.embed(embedContainer, config);
  
-// Report.off removes a given event handler if it exists.
-//report.off("loaded");
- 
-// Report.on will add an event handler which prints to Log window.
-/*report.on("loaded", function() {
-    Log.logText("Loaded");
-});
- 
-report.on("error", function(event) {
-    Log.log(event.detail);
-     
-    report.off("error");
-});
- 
-report.off("saved");
-report.on("saved", function(event) {
-    Log.log(event.detail);
-    if(event.detail.saveAs) {
-        Log.logText('In order to interact with the new report, create a new token and load the new report');
-     }
- }); */ 
-
-/*var config = {
-        type: 'dashboard',
-        accessToken: txtAccessToken,
-        embedUrl: txtEmbedUrl
-    };
-
-        // Grab the reference to the div HTML element that will host the dashboard.
-var dashboardContainer = $('#embedContainer')[0];
-
-
-    // Embed the dashboard and display it within the div container.
-var dashboard = powerbi.embed(dashboardContainer, config);*/
-
  console.log("config");
  console.log(config);
 
 }
-
-
-
-
-    </script>
+</script>
     
-
-    <!-- jQuery -->
-    
-    
-  
-
 </body>
 
 </html>
