--- a/src/views/home.html
+++ b/src/views/home.html
@@ -86,10 +86,9 @@ console.log(localStorage.tokenGlobal);
       if (xhr.readyState === 4 && xhr.status === 200) {
         console.log("Groups - XHR Response");
         console.log(xhr.responseText);
-        console.log("Groups - XHR Response");
-        console.log(xhr.responseText);
-
         var responseArr = xhr.responseText.value;
+        console.log("Groups - responseArr");
+        console.log(xhr.responseText.value);
         var groupId = '';
         for (var i in responseArr) {
           if (responseArr[i].name === "ryderdemo") {
