--- a/src/views/home.html
+++ b/src/views/home.html
@@ -151,7 +151,7 @@ function generateToken(reportId, embedUrl, groupId){
   var xhr = new XMLHttpRequest();
   xhr.open('POST', 'https://api.powerbi.com/v1.0/myorg/groups/'+groupId+'/reports/'+reportId+'/GenerateToken', true);
   xhr.setRequestHeader('Authorization', 'Bearer ' + localStorage.tokenGlobal);
-  xhr.setRequestHeader('Content-Type', application/json; charset=utf-8);
+  xhr.setRequestHeader('Content-Type', "application/json; charset=utf-8");
 var bodyParams = {
   "accessLevel": "View"
 };
