Get Generate Token REST API Call

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -170,7 +170,7 @@ var bodyParams = {
         'ERROR:\n\n' + xhr.responseText;
     }
   };
-  xhr.send(bodyParams);
+  xhr.send(JSON.stringify(bodyParams));
 
 }
 
