Get Power BI Embed Report API Call

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -164,6 +164,9 @@ var bodyParams = {
         console.log(responseJson);
         console.log("Generate Token - token");
         console.log(responseJson.token);
+        if(responseJson.token){
+         embedPowerBIReport(embedToken, reportId, responseJson.token);
+        }
     } else {
       // TODO: Do something with the error (or non-200 responses)
       document.getElementById('api_response').textContent =
@@ -172,6 +175,38 @@ var bodyParams = {
   };
   xhr.send(JSON.stringify(bodyParams));
 
+}
+
+function embedPowerBIReport(embedToken, reportId, embedUrl){
+// Get models. models contains enums that can be used.
+  var models = window['powerbi-client'].models;
+
+  // We give All permissions to demonstrate switching between View and Edit mode and saving report.
+  var permissions = models.Permissions.All;
+
+  // Embed configuration used to describe the what and how to embed.
+  // This object is used when calling powerbi.embed.
+  // This also includes settings and options such as filters.
+  // You can find more information at https://github.com/Microsoft/PowerBI-JavaScript/wiki/Embed-Configuration-Details.
+  var config = {
+    type: 'report',
+    accessToken: embedToken,
+    embedUrl: embedUrl,
+    tokenType: models.TokenType.Embed,
+    id: reportId,
+     // permissions: permissions,
+      settings: {
+          filterPaneEnabled: true,
+          navContentPaneEnabled: true
+      }
+  };
+// Get a reference to the embedded report HTML element
+var embedContainer = $('#embedContainer')[0];
+// Embed the report and display it within the div container.
+var report = powerbi.embed(embedContainer, config);
+ 
+ console.log("config");
+ console.log(config);
 }
 
 function loadPowerBIReport() {
