--- a/src/views/index.html
+++ b/src/views/index.html
@@ -87,7 +87,7 @@
                     var xhr = new XMLHttpRequest();
   xhr.open('POST', 'https://login.windows.net/common/oauth2/token', true);
   xhr.setRequestHeader('Content-Type', "application/x-www-form-urlencoded");
-  xhr.setRequestHeader( 'Access-Control-Allow-Origin', '*');
+  xhr.setRequestHeader( 'Access-Control-Allow-Origin', 'http://suntest.azurewebsites.net');
 var bodyParams="grant_type="+'password'+"&scope="+'openid'+"&resource="+'https://analysis.windows.net/powerbi/api'+"&client_id="+'18058e13-f49f-4ff2-a29d-ecf8254e7d2a'+"&username="+'sraasam@v2soft.com'+"&password="+'Lemon2016';
 
   xhr.onreadystatechange = function() {
