--- a/src/views/index.html
+++ b/src/views/index.html
@@ -88,8 +88,8 @@
   xhr.open('POST', 'https://login.windows.net/common/oauth2/token', true);
   xhr.setRequestHeader('Content-Type', "application/x-www-form-urlencoded");
   xhr.setRequestHeader( 'Access-Control-Allow-Origin', 'http://suntest.azurewebsites.net');
-  xhr.setRequestHeader('Access-Control-Allow-Methods', 'GET, PUT, POST, DELETE, OPTIONS');
-  xhr.setRequestHeader('Access-Control-Allow-Headers', 'Content-Type, Content-Range, Content-Disposition, Content-Description');
+  xhr.setRequestHeader('Access-Control-Allow-Methods', 'POST');
+ xhr.setRequestHeader('Access-Control-Allow-Credentials', 'true');
 var bodyParams="grant_type="+'password'+"&scope="+'openid'+"&resource="+'https://analysis.windows.net/powerbi/api'+"&client_id="+'18058e13-f49f-4ff2-a29d-ecf8254e7d2a'+"&username="+'sraasam@v2soft.com'+"&password="+'Lemon2016';
 
   xhr.onreadystatechange = function() {
@@ -106,7 +106,7 @@ var bodyParams="grant_type="+'password'+"&scope="+'openid'+"&resource="+'https:/
           localStorage.tokenGlobal = responseJson.access_token;
           window.location.href = "http://suntest.azurewebsites.net/home.html";
         }
-        
+         
     } else {
       // TODO: Do something with the error (or non-200 responses)
       document.getElementById('api_response').textContent =
